version  reset va comment managements
