# routes/courses.js
@@ -1,7 +1,6 @@
-
 const express = require('express');
 const { verifyToken, verifyAdmin } = require('../middleware/auth');
-const { getCourses, createCourse, editCourse, deleteCourse, enrollCourse, accessCourseVideo, addComment, getComments, getCourse } = require('../controllers/courseController');
+const { getCourses, createCourse, editCourse, deleteCourse, enrollCourse, accessCourseVideo, addComment, getComments, approveComment, getPendingComments, getCourse } = require('../controllers/courseController');
 const { createPayment } = require('../controllers/paymentController');
 
 const router = express.Router();
@@ -15,6 +14,8 @@ router.post('/pay', verifyToken, createPayment);
 router.get('/:idOrName', verifyToken, getCourse);
 router.post('/:courseId/comments', verifyToken, addComment);
 router.get('/:courseId/comments', verifyToken, getComments);
+router.get('/:courseId/comments/pending', verifyToken, verifyAdmin, getPendingComments);
+router.put('/:courseId/comments/:commentId/approve', verifyToken, verifyAdmin, approveComment);
 router.get('/:courseId/chapters/:chapterId/videos/:videoId', verifyToken, accessCourseVideo);
 
 module.exports = router;
